注册页面与数据库

--- a/src/html/login.html
+++ b/src/html/login.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>login</title>
 	<link rel="stylesheet" href="../css/login.css">
+	<script src="../js/require.js" data-main="../js/login"></script>
 </head>
 <body>
 	<div class="headerbg">
