--- a/src/html/register.html
+++ b/src/html/register.html
@@ -5,6 +5,8 @@
 	<title>register</title>
 	<link rel="stylesheet" href="../css/register.css">
 	<link rel="stylesheet" href="../css/footer.css">
+	<script src="../js/require.js" data-main="../js/register"></script>
+
 </head>
 <body>
 	<div class="headerbg">
@@ -30,7 +32,7 @@
 					<div class="username clearfix">
 						<div class="tou fl"></div>
 						<div class="telphone fr">
-							<input name="username" class="telphone_num" type="text" placeholder="请输入常用手机号">
+							<input name="username" id="username" class="telphone_num" type="text" placeholder="请输入常用手机号">
 						</div>
 					</div>
 					<div class="clearfix">
@@ -45,16 +47,16 @@
 					<div class="username clearfix">
 						<div class="lock fl"></div>
 						<div class="telphone fr">
-							<input name="password" class="password" type="password" placeholder="请输入密码">
+							<input name="password" class="password" id="password" type="password" placeholder="请输入密码">
 						</div>
 					</div>
 					<div class="username confirm clearfix">
 						<div class="lock fl"></div>
 						<div class="telphone fr">
-							<input name="password" class="password" type="password" placeholder="请确认密码">
+							<input name="password" class="password" id="confirm_pwd" type="password" placeholder="请确认密码">
 						</div>
 					</div>
-				
+					<div class="tips"></div>
 
 					<div class="login_btn">
                 		<button type="button">注册</button>
