--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,19 @@
 					<div class="head-app  clearfix">
 						<span><em class="icon-app fl"></em>4000-250-630</span>
 						<div class="app fr">
-							<a href="#" class="ewm1">
-								<em class="icon-app2 fl"></em>
-								下载美西时尚APP
-							</a>
-							<div style="display: none;"></div>
+							<div>
+								<a href="#" class="ewm1">
+									<em class="icon-app2 fl"></em>
+									下载美西时尚APP
+								</a>
+							</div>
+							
+							<div class="ewm">
+								<a href="#">
+									<img src="./img/down_app.png" alt="下载APP二维码" />
+									<span>扫码下载</span>
+								</a>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -87,21 +95,21 @@
 			</div>
 			<div class="special_left">
 				<div class="special_left_up">
-					<a href="#"><img src="./img/20001.jpg" alt="会员专利图片"></a>
+					<a href="./html/goodslist.html"><img src="./img/20001.jpg" alt="会员专利图片"></a>
 				</div>
 				<div class="special_left_down">
-					<a href="#"><img src="./img/20002.jpg" alt="明星品牌主推"></a>
+					<a href="./html/goodslist.html"><img src="./img/20002.jpg" alt="明星品牌主推"></a>
 				</div>
 			</div>
 			<div class="special_middle">
-				<a href="#"><img src="./img/20003.jpg" alt="LOOKBOOK推荐"></a>
+				<a href="./html/goodslist.html"><img src="./img/20003.jpg" alt="LOOKBOOK推荐"></a>
 			</div>
 			<div class="special_right">
 				<div class="special_left_up">
-					<a href="#"><img src="./img/20004.jpg" alt="MEICICLUB加速升级"></a>
+					<a href="./html/goodslist.html"><img src="./img/20004.jpg" alt="MEICICLUB加速升级"></a>
 				</div>
 				<div class="special_right_down">
-					<a href="#"><img src="./img/20005.jpg" alt="品牌种草"></a>
+					<a href="./html/goodslist.html"><img src="./img/20005.jpg" alt="品牌种草"></a>
 				</div>
 			</div>
 			<div style="clear: both;"></div>
@@ -116,21 +124,21 @@
 			</div>
 			<div class="special_left">
 				<div class="special_left_up">
-					<a href="#"><img src="./img/30001.jpg" alt="会员专利图片"></a>
+					<a href="./html/goodslist.html"><img src="./img/30001.jpg" alt="会员专利图片"></a>
 				</div>
 				<div class="special_left_down">
-					<a href="#"><img src="./img/30002.jpg" alt="明星品牌主推"></a>
+					<a href="./html/goodslist.html"><img src="./img/30002.jpg" alt="明星品牌主推"></a>
 				</div>
 			</div>
 			<div class="special_middle">
-				<a href="#"><img src="./img/30003.jpg" alt="LOOKBOOK推荐"></a>
+				<a href="./html/goodslist.html"><img src="./img/30003.jpg" alt="LOOKBOOK推荐"></a>
 			</div>
 			<div class="special_right">
 				<div class="special_left_up">
-					<a href="#"><img src="./img/30004.jpg" alt="MEICICLUB加速升级"></a>
+					<a href="./html/goodslist.html"><img src="./img/30004.jpg" alt="MEICICLUB加速升级"></a>
 				</div>
 				<div class="special_right_down">
-					<a href="#"><img src="./img/30005.jpg" alt="品牌种草"></a>
+					<a href="./html/goodslist.html"><img src="./img/30005.jpg" alt="品牌种草"></a>
 				</div>
 			</div>
 			<div style="clear: both;"></div>
@@ -145,21 +153,21 @@
 			</div>
 			<div class="special_left">
 				<div class="special_left_up">
-					<a href="#"><img src="./img/40001.jpg" alt="会员专利图片"></a>
+					<a href="./html/goodslist.html"><img src="./img/40001.jpg" alt="会员专利图片"></a>
 				</div>
 				<div class="special_left_down">
-					<a href="#"><img src="./img/40002.jpg" alt="明星品牌主推"></a>
+					<a href="./html/goodslist.html"><img src="./img/40002.jpg" alt="明星品牌主推"></a>
 				</div>
 			</div>
 			<div class="special_middle">
-				<a href="#"><img src="./img/40003.jpg" alt="LOOKBOOK推荐"></a>
+				<a href="./html/goodslist.html"><img src="./img/40003.jpg" alt="LOOKBOOK推荐"></a>
 			</div>
 			<div class="special_right">
 				<div class="special_left_up">
-					<a href="#"><img src="./img/40004.jpg" alt="MEICICLUB加速升级"></a>
+					<a href="./html/goodslist.html"><img src="./img/40004.jpg" alt="MEICICLUB加速升级"></a>
 				</div>
 				<div class="special_right_down">
-					<a href="#"><img src="./img/40005.jpg" alt="品牌种草"></a>
+					<a href="./html/goodslist.html"><img src="./img/40005.jpg" alt="品牌种草"></a>
 				</div>
 			</div>
 			<div style="clear: both;"></div>
