--- a/src/html/car.html
+++ b/src/html/car.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>商品列表页</title>
-	<link rel="stylesheet" href="../css/goodslist.css">
+	<title>购物车列表页</title>
+	<link rel="stylesheet" href="../css/car.css">
 	<!-- 轮播图样式 -->
 	<link rel="stylesheet" href="../lib/jquery.lxCarousel/jquery.lxCarousel.css">
-	<script src="../js/require.js" data-main="../js/goodslist"></script>
+	<script src="../js/require.js" data-main="../js/car"></script>
 
 </head>
 <body>
@@ -114,225 +114,69 @@
 	</div>
 	<div class="containerbg">
 	        <div class="headerShadow"></div>
+	        <!-- 购物车内容 -->
 	        <div class="container">
-			<div class="title">商品列表</div>
-			<div class="content clearfix">
-				<div class="content_left fl">
-					<div class="list">
-						<div class="listItem">
-							<span class="fl">商品</span>
-							<span class="lt_state fr">-</span>
-						</div>
-						<div class="listItem_b" style="display: block;">
-							<div class="clear_chose">清除条件</div>
-							<div class="chose">
-								<ul class="chose_list">
-									<li>
-										<a href="#">包袋<em class="lstLab"></em></a>
-									</li>
-									<li>
-										<a href="#">服饰<em class="lstLab"></em></a>
-									</li>
-									<li>
-										<a href="#">腕表<em class="lstLab"></em></a>
-									</li>
-									<li>
-										<a href="#">童装<em class="lstLab"></em></a>
-									</li>
-									<li>
-										<a href="#">创意生活<em class="lstLab"></em></a>
-									</li>
-								</ul>
+				<div class="car_title">
+		        	<div class="title_01 fl">
+		        		<label class="allpro" for="allCheck">
+		        			<input id="allCheck" type="checkbox" class="allCheck" />全选
+	        			</label>
+	        		</div>
+		            <div class="title_02 fl">商品信息</div>
+		            <div class="title_03 fl">单价</div>
+		            <div class="title_04 fl">数量</div>
+		            <div class="title_05 fl">小计</div>
+		        </div>
+		        <!-- 商品列表 -->
+		        <div class="carList">
+		        	<div class="goodsList"></div>
+		        </div>
+				<div class="car_bar">
+					<div class="car_delete clearfix">
+						<div class="car_delete_l fl clearfix">
+							<div class="allDelete fl">
+								<label class="allpro" for="allDelete"><input id="allDelete" type="checkbox">全选</label>
+							</div>
+							<div class="allDelete_msg fl">
+		                        <a href="#">删除选中的商品</a>
+		                        <a href="#">加入收藏</a>
 							</div>
 						</div>
-					</div>	
-					<div class="list list_t">
-						<div class="listItem list_tf">
-							<span class="fl">性别</span>
-							<span class="lt_state fr">+</span>
-						</div>
-						<div class="list_tt listItem_b">
-							<div class="clear_chose">清除条件</div>
-							<div class="chose">
-								<ul class="chose_list">
-									<li>
-										<a href="#" >男女
-											<em class="lstCheck "></em>
-										</a>
-									</li>
-									<li>
-										<a href="#" >男女
-											<em class="lstCheck "></em>
-										</a>
-									</li>
-									<li>
-										<a href="#" >男
-											<em class="lstCheck "></em>
-										</a>
-									</li>
-									<li>
-										<a href="#" >女
-											<em class="lstCheck "></em>
-										</a>
-									</li>
-									<li>
-										<a href="#" >儿童
-											<em class="lstCheck "></em>
-										</a>
-									</li>
-										<li>
-										<a href="#"> 男童
-											<em class="lstCheck "></em>
-										</a>
-									</li>
-										<li>
-										<a href="#" >女童
-											<em class="lstCheck "></em>
-										</a>
-									</li>
-								</ul>
+						<div class="car_delete_r fr">
+							<div class="goods_chose">
+								<p class="goods_num">
+									已选商品&nbsp; <span class="total_num">1</span>&nbsp; 件&nbsp;&nbsp;&nbsp;&nbsp;合计（不含运费、税费）:￥&nbsp;
+									<span class="total_price"></span>
+								</p>
+								<p class="goods_discount">活动折扣：-￥&nbsp;0.00
+									<span class="discount"></span>
+								</p>
+
 							</div>
 						</div>
 					</div>
-					<div class="list list_s">
-						<div class="listItem list_sf">
-							<span class="fl">品牌</span>
-							<span class="lt_state fr">+</span>
-						</div>
-						<div class="list_st listItem_b">
-							<div class="clear_chose">清除条件</div>
-							<div class="chose">
-								<ul class="chose_list brand_list">
-									<li>
-										<a href="#" >Fendi芬迪
-											<em class="lstCheck "></em>
-										</a>
-									</li>
-									<li>
-										<a href="#" >BVLGARI 宝格丽
-											<em class="lstCheck "></em>
-										</a>
-									</li>
-									<li>
-										<a href="#" >Celine 赛琳
-											<em class="lstCheck "></em>
-										</a>
-									</li>
-									<li>
-										<a href="#" >Gucci 古驰
-											<em class="lstCheck "></em>
-										</a>
-									</li>
-									<li>
-										<a href="#" >Red Valentino 红·华伦天奴
-											<em class="lstCheck "></em>
-										</a>
-									</li>
-									
-								</ul>
-							</div>
-						</div>
+					<div class="continue_buy clearfix">
+
+		            	<a class="go_on_buy fl" href="#" target="_blank">继续购物</a>
+		            	<button class="buying fr" ">立即结算</button>
+
 					</div>
-					<div class="list list_f">
-						<div class="listItem list_ff">
-							<span class="fl">价格</span>
-							<span class="lt_state fr">+</span>
-						</div>
-						<div class="list_ft listItem_b">
-							<div class="clear_chose">清除条件</div>
-							<div class="chose">
-								<ul class="chose_list">
-									<div class="priceChoose">
-										<input title="最低价" class="priceInt priceStart" type="text" value="" placeholder="￥ 最低价"> 
-										- <input title="最高价" class="priceInt priceEnd" type="text" value="" placeholder="￥ 最高价">
-									</div>
-									<a class="pricebtn" href="#">确认</a>
-
-								</ul>
-							</div>
-						</div>
-					</div>	
-					<div class="list list_g">
-						<div class="listItem list_gf">
-							<span class="fl">颜色</span>
-							<span class="lt_state fr">+</span>
-						</div>
-						<div class="list_gt listItem_b">
-							<div class="clear_chose">清除条件</div>
-							<div class="chose">
-								<ul class="chose_color clearfix">
-									<li data-id="1" class="color_list fl">
-										<a href="#" title="黑色 black">
-											黑色<em class="lstCheck "></em>
-										</a>
-									</li>
-									<li data-id="1" class="color_list fl">
-										<a href="#" title="灰色 black">
-											灰色<em class="lstCheck "></em>
-										</a>
-									</li>
-									<li data-id="1" class="color_list fl">
-										<a href="#" title="白色 black">
-											白色<em class="lstCheck "></em>
-										</a>
-									</li>
-									<li data-id="1" class="color_list fl">
-										<a href="#" title="粉色 black">
-											粉色<em class="lstCheck "></em>
-										</a>
-									</li>
-									<li data-id="1" class="color_list fl">
-										<a href="#" title="蓝色 black">
-											蓝色<em class="lstCheck "></em>
-										</a>
-									</li>
-									<li data-id="1" class="color_list fl">
-										<a href="#" title="金色 black">
-											金色<em class="lstCheck "></em>
-										</a>
-									</li>
-									<li data-id="1" class="color_list fl">
-										<a href="#" title="绿色 black">
-											绿色<em class="lstCheck "></em>
-										</a>
-									</li>
-									<li data-id="1" class="color_list fl">
-										<a href="#" title="棕色 black">
-											棕色<em class="lstCheck "></em>
-										</a>
-									</li>
-									<li data-id="1" class="color_list fl">
-										<a href="#" title="黄色 black">
-											黄色<em class="lstCheck "></em>
-										</a>
-									</li>
-									<li data-id="1" class="color_list fl">
-										<a href="#" title="紫色 black">
-											紫色<em class="lstCheck "></em>
-										</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>	
-
 				</div>
-				<div class="content_right fr">
-					<div class="rank clearfix">
-						<div class="proFilter fl">
-							<span>排序：</span>
-							<a href="#" title="新品">新品</a>
-							<a href="#" title="新品">人气
-								<em class="proSort"></em>
-							</a>
-							<a href="#" title="新品">价格
-								<em class="proSort"></em>
-							</a>
+				<div class="like">
+					<div class="your_fav">猜你喜欢</div>
+					<div class="goods_like">
+						<div class="goods_container">
+							<div class="goods_prev">
+								<p></p>
+							</div>
+							<div class="goods_next">
+								<p></p>
+							</div>
+							<div class="like_list">
+								
+							</div>
 						</div>
-						<div class="page fr"></div>
 					</div>
-					<div class="goodslist"></div>
-					<div class="page"></div>
 				</div>
 			</div>
 		</div>
