--- a/src/html/register_success.html
+++ b/src/html/register_success.html
@@ -6,9 +6,11 @@
 	<link rel="stylesheet" href="../css/register_success.css">
 	<link rel="stylesheet" href="../css/footer.css">
 	<script src="../js/require.js" data-main="../js/register_success"></script>
-
+	<script src="../lib/jquery3.1.1.js"></script>
+	<script src="../js/public.js"></script>
 </head>
 <body>
+	<!-- 头部 -->
 	<div class="headerbg">
 		<div class="header clearfix">
 			<div class="logo fl">
@@ -24,6 +26,7 @@
 		</div>
 		<div class="shadow"></div>
 	</div>
+	<!-- 内容区 -->
 	<div class="content">
 		<div class="login">
 			<h1>注册成功！欢迎您！</h1>
@@ -33,5 +36,7 @@
 
 		</div>
 	</div>
+	<!-- 底部 -->
+	<div id="footer"></div>
 </body>
 </html>
