--- a/src/html/header.html
+++ b/src/html/header.html
@@ -16,8 +16,10 @@
 				</div>
 				<div class="right clearfix fr">
 					<div class="login fl">
-						<span><a href="#">登录</a></span>
-						<span><a href="#">注册</a></span>
+						<span id="username" style="display: none"></span>
+						<span id="logout" style="display: none">退出</span>
+						<span id="signin"><a href="#">登录</a></span>
+						<span id="signup"><a href="#">注册</a></span>
 					</div>
 					<div class="car fr" >
 						<div>
